playing with javascript 6

--- a/src/main/js/index.html
+++ b/src/main/js/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Playground</title>
-    <script type="text/javascript">
-        var blah = "hello world!";
-        document.write(blah);
-    </script>
+<meta charset="UTF-8" />
+<title>Playground</title>
+<script type="text/javascript" src="playground.js"></script>
 </head>
 <body>
 </body>
